--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,3 +1,11 @@
-FROM nginx:20
-RUN apt install update && apt install nginx
-ENV User=Prakash
+ARG version
+FROM almalinux:${version:-9}
+ENV course="DevOps with AWS" \
+    trainer="sivakumar reddy" \
+    duration="120HRS"
+WORKDIR /app
+#here user1 is key, someuser is default value
+ARG USERNAME=Sivakumar
+ENV USERNAME=$USERNAME
+RUN echo "Hello User: ${USERNAME}, image version: ${version}" > /app/devops.txt
+CMD ["sleep", "100"]
