--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,5 +1,5 @@
-ARG version
-FROM almalinux:${version:-9}
+ARG version=9
+FROM almalinux:$version
 ENV course="DevOps with AWS" \
     trainer="sivakumar reddy" \
     duration="120HRS"
